2019-09-23      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-lang.in:  removed reference to sckt.c.
	* gm2/configure.in:  updated dates.
	* gm2/gm2-lang.h:  updated dates.
	* gm2/gm2-tree.h:  updated dates.
	* gm2/gpl.texi:  combined dates.
	* gm2/m2pp.h:  fixed boilerplate header.
	* gm2/m2pp.c:  updated dates.
	* gm2/gm2-compiler/ppg.mod:  corrected Copyright
	  strings.

2019-09-21      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/Make-file.in:  build args for mc use -fm2-g.
	* gm2/mc/decl.mod:  huge amount of changes as the
          varient record for intrinsics was being used
          inconsistently.
	* gm2/mc-boot:  regenerated.

2019-09-18      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-gcc/m2expr.c:  (divCeilOverflowPosNeg)
          short circuit some of the tests given the range.
          (divCeilOverflowPosPos) short circuit some of the
          tests given the range.
	* gm2/plugin/m2rte.c:  improved comment in initializer.
	* gm2/gm2-libs/FIO.mod:  bugfix via valgrind, off by one
          error corrected.
	* (mc) regenerated.

2019-09-11      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/bnf/m2-3.bnf:  modified so that BuildAssignment
          now take the tokenno of the assignment.  Use
          PushTtok to identify the operator location for
	  improved error message accuracy.
	* gm2/bnf/m2-h.bnf:  modified so that BuildAssignment
          now take the tokenno of the assignment.  Use
          PushTtok to identify the operator location for
	  improved error message accuracy.
	* gm2/gm2-compiler/M2Base.mod:  removed blank line.
	* gm2/gm2-compiler/M2Emit.def:  (UnknownLocation)
	  New procedure.  (BuiltinsLocation) New procedure.
	* gm2/gm2-compiler/M2Emit.mod:  (UnknownLocation)
	  New procedure.  (BuiltinsLocation) New procedure.
	* gm2/gm2-compiler/M2LexBuf.def:  (UnknownTokenNo)
          defined.  (BuiltinTokenNo) defined.  (PrintTokenNo)
	  New procedure.