@@ -1,7 +1,5 @@
-(* Copyright (C) 2015
-   Free Software  Foundation, Inc.  *)
-
-(* This file is part of GNU Modula-2.
+(* Copyright (C) 2015-2019  Free Software Foundation, Inc.
+   This file is part of GNU Modula-2.
 
 GNU Modula-2 is free software; you can redistribute it and/or modify it under
 the terms of the GNU General Public License as published by the Free
