@@ -1,23 +1,22 @@
 #!/bin/bash
 
-# Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008
-# Free Software Foundation, Inc.
+# Copyright (C) 2000-2019 Free Software Foundation, Inc.
 # This file is part of GNU Modula-2.
 #
 # GNU Modula-2 is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 3, or (at your option)
 # any later version.
-# 
+#
 # GNU Modula-2 is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-# 
+#
 # You should have received a copy of the GNU General Public License
 # along with GNU Modula-2; see the file COPYING.  If not, write to the
 # Free Software Foundation, 51 Franklin Street, Fifth Floor, Boston, MA
-# 02110-1301, USA. 
+# 02110-1301, USA.
 #
 
 LIBS_H=$1
@@ -249,7 +248,7 @@ EOFEOF
 	   echo "   syscalls[CALL_${CALL_LIST[$count]}] = (void *)no_${CALL_LIST[$count]};"
            echo "# endif"
        else
-           echo "   /* ${LIBS_H} should test for the system call or libc call $func */" 
+           echo "   /* ${LIBS_H} should test for the system call or libc call $func */"
 	   echo "   syscalls[CALL_${CALL_LIST[$count]}] = (void *)no_${CALL_LIST[$count]};"
        fi
        count=`expr $count + 1`
