@@ -1,18 +1,24 @@
 .\"
-.\" Copyright (C) 2006 Free Software Foundation, Inc.
-.\" 
+.\" Copyright (C) 2006-2019 Free Software Foundation, Inc.
+.\"
 .\" Permission is granted to copy, distribute and/or modify this document
-.\" under the terms of the GNU Free Documentation License, Version 1.2 or
-.\" any later version published by the Free Software Foundation; with no
-.\" Invariant Sections, with the Front-Cover texts being `A GNU Manual,''
-.\" and with the Back-Cover Texts as in (a) below.  A copy of the
-.\" license is included in the section entitled `GNU Free Documentation
-.\" License.''
-.\" 
-.\" (a) The FSF's Back-Cover Text is: `You have freedom to copy and modify
-.\" this GNU Manual, like GNU software.  Copies published by the Free
-.\" Software Foundation raise funds for GNU development.''
-.\" 
+.\" under the terms of the GNU Free Documentation License, Version 1.3 or
+.\" any later version published by the Free Software Foundation; with the
+.\" Invariant Sections being ``Funding Free Software'', the Front-Cover
+.\" Texts being (a) (see below), and with the Back-Cover Texts being (b)
+.\" (see below).  A copy of the license is included in the section entitled
+.\" ``GNU Free Documentation License''.
+.\"
+.\" (a) The FSF's Front-Cover Text is:
+.\"
+.\"      A GNU Manual
+.\"
+.\" (b) The FSF's Back-Cover Text is:
+.\"
+.\"      You have freedom to copy and modify this GNU Manual, like GNU
+.\"      software.  Copies published by the Free Software Foundation raise
+.\"      funds for GNU development.
+.\"
 .defcolor darkred rgb 0.65f 0.1f 0.2f
 .defcolor darkgreen rgb 0.1f 0.4f 0.2f
 .defcolor darkblue rgb 0.1f 0.2f 0.6f
